[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "argvparse"
version = "1.0.0"
packages = ["argvparse"]
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/CodeCrafter-TL/argvparse"

[tool.setuptools.package_data]
include = [
    "README.md",
    "LICENSE"
]

[tool.setuptools.classifiers]
"Programming Language :: Python :: 3"
"License :: OSI Approved :: MIT License"
"Operating System :: OS Independent"

[tool.setuptools.dependencies]
install_requires = []